# x-edr-eigenmath

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  MODULE.bazel  README.md  SECURITY.md  WORKSPACE
.github/workflows/: buildscript.sh  codeql.yml
eigenmath/: BUILD  alignment_test.cc  compare_vectors.h  compare_vectors_test.cc  constants.h  constants_test.cc  conversions.cc  conversions.h  conversions_test.cc  covariance.cc  covariance.h  covariance_test.cc  distribution.h  distribution_test.cc  eigenmath.proto  geographic.cc  halton_sequence.h  halton_sequence_test.cc  incremental_stats.h  incremental_stats_test.cc  interpolation.h  interpolation_test.cc  line_search.h  line_search_test.cc  line_utils.h  line_utils_test.cc  manifolds.h  manifolds_test.cc  matchers.h  matchers_test.cc  mean_and_covariance.h  mean_and_covariance_test.cc  normal_distribution.h  normal_distribution_test.cc  numerical_derivatives.h  numerical_derivatives_test.cc  plane_conversions.h  plane_conversions_test.cc  pose2.h  pose2_test.cc  (+55 more)
