

module(
    name = "x_edr_eigenmath",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.1", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.8.5", repo_name = "com_google_benchmark")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")

bazel_dep(name = "eigen", version = "3.4.0")

# GenIt
_GENIT_VERSION = "1.0.0"
http_archive(
    name = "x_edr_genit",
    sha256 = "ab1bbb15ecbe86c5c3888a12c56fe88fac416f2f305acaf1bbf7f68c3d429851",
    strip_prefix = "x-edr-genit-%s" % _GENIT_VERSION,
    urls = [
        "https://github.com/theteamatx/x-edr-genit/archive/refs/tags/v%s.tar.gz" % _GENIT_VERSION,
    ],
)
